# shared-dev-tools

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PREAMBLE.md  README.md  SECURITY.md  STATE_OF_PROJECT.md  bundle.md  package-lock.json  package.json  pyproject.toml
.cache/: token_cache.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
artifacts/: bundle.index.json  bundle.md  cache.md  inc.md  mcp-live.index.json  mcp-live.manifest.json  mcp-live.md  mcp-test.index.json  mcp-test.manifest.json  mcp-test.md  pre.md  strict.md
docs/: MCP_USAGE.md  SMOKES_FIXER.md  SMOKES_GUIDE.md  comments.md  token_limits.md
docs/tasks/: 001_Refactor.md
mcp/bundle-files-mcp/: index.mjs  package-lock.json  package.json
mcp/git-patcher/: index.mjs
prototypes/: __init__.py
prototypes/gamified/: __init__.py  cli.py  spec_loader.py  spec_model.py  tools.py
scripts/: run-bundle-mcp.sh
src/shared_dev_tools/: __init__.py  cli.py
tests/: conftest.py
tests/smokes/: test_bundle_on_run_smoke.py  test_cli_archive_files_smoke.py  test_cli_bundle_smoke.py  test_cli_changed_since_smoke.py  test_cli_strict_and_archive_smokes.py
tmp/mcp-small/: HAPPYPATH_GUIDE.md
tmp/mcp-small/artifacts/: mcp-small.index.json  mcp-small.manifest.json  mcp-small.md
workspace/runs/20250923115358/bundle/: bundle.md
workspace/runs/20250923121701/bundle/: bundle.md
