[project]
name = "shared-dev-tools"
version = "0.1.0"
description = "Utilities for bundling source files into LLM-friendly artifacts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.16.0",
    "pydantic>=2.0.0",
]

[project.scripts]
bundle-files = "shared_dev_tools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared_dev_tools"]

[tool.hatch.build.targets.sdist]
include = ["src/shared_dev_tools", "README.md", "pyproject.toml"]
